video and code btn update

--- a/QUICKCHAT/chat.html
+++ b/QUICKCHAT/chat.html
@@ -27,9 +27,8 @@
             <input type="text" placeholder="type something..." id="messageinput">
             <button type="submit" id="send">send</button>
 
-            <!-- FILE UPLOAD BUTTON -->
-            <label for="uploadbtn" id="upload-label"></label>
-            <input type="file" id="uploadbtn" class="uploadbtdisplay" accept=".txt">
+            <!-- CODE MODE BUTTON -->
+            <!-- <button id="codebtn"><></button> -->
         </form>
 
         <!-- MESSAGES AREA -->
